Verion 0.9.41dev (?? ??? ???)
  - Fixed bug 664641: not using $login_url in connect.php
  - Fixed bug 677677: year.php used "<?" rather than "<?php"
  - Fixed bug 705756: conflicts page not showing user name
  - Fixed bug 732729: public access link on login.php ignores preference
    for default view
  - Fixed bugs 753159, 684230: bug in site extras in edit_entry.php -
    was using $i for inner and outer loop.
  - Fixed bug 753107: Not handling rejected or deleted events properly
  - Fixed bug 739309: "All Day Event" not saved properly
  - Altered webcal_user_pref and webcal_config tables to allow
    values of 100 chars instead of 50.
  - Fixed bug 732887: extra CR chars in external users
  - Fixed bug 736411: Array elements disappear if using + to concat
  - Added patch 673899: Viewing rights set wrong for view_entry.php
  - Added patch 736202: Improved iCalendar export
  - Fixed bug 732885: Bad SQL in send_reminders.php
  - Fixed bug 739010: error creating postgres tables
  - Fixed bug 740983: in admin.php, should be "false" not "$false"
  - Added patch 710867: Allow postgresql connections through unix sockets
  - Added patch 707382: Fix for Oracle - don't use 'as' in SQL.
  - Fixed description to display https links as links.
  - Added patch 690347: CSV export for pilot-datebook
  - Added patch 656318: when adding new user, passwords are not compared
    to determine if they match.
  - Added a config option for persistent connections.
  - Fixed bug 727317: Used html_to_8bits(), not html_to_8bits().
  - Fixed bug 727315: Bad SQL in send_reminders.php
  - Fixed bug 704918: functionality (logic) to admin the boss
  - Fixed bug 705871: Unnecessary rows in webcal_site_extras
  - Fixed bug 703563: catagory "None" not translated if using another language
  - Added "timebar" view that shows users hours in a timebar.
  - Fixed timezone bug 686829: displays pm instead of am for midnight events
  - Fixed timezone bug 686789: TimeZone Error when servertime is midnight